tests/miniJava/neg/001592_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new void int [ 0 ] ; } }
